# spofy-rs

./: .gitignore  .rustfmt.toml  COPYING  Cargo.toml  README.md
scripts/: license  license.yaml
src/: main.rs
src/spofy-cli/: Cargo.toml  main.rs
src/spofy-cli/interface/: cli.rs  config.rs  mod.rs
src/spofy-core/: Cargo.toml  lib.rs
src/spofy-core/client/: auth.rs  error.rs  mod.rs  scopes.rs
