[package]
name = "spofy_core"
version = "0.1.0"
description = "The core backend for the Spofy client."
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dotenv = "0.13.0"
failure = "0.1.5"
failure_derive = "0.1.5"
hyper = "0.12.27"
serde = "1.0.90"
serde_derive = "1.0.90"
serde-value = "0.5.3"
toml = "0.5.0"
