[package]
name = "spofy-core"
version = "0.1.0"
description = "The core backend for the Spofy client."
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"

[lib]
name = "spofy_core"
path = "lib.rs"

[dependencies]
dotenv = "0.13.0"
failure = "0.1.5"
failure_derive = "0.1.5"
futures = "0.1.26"
hyper = "0.12.27"
hyper-tls = "0.3.2"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde-value = "0.5.3"
tokio = "0.1.18" # TODO: I'd like to phase this out
